--- a/.nycrc
+++ b/.nycrc
@@ -1,5 +1,13 @@
 {
   "nyc": {
-    "extends": "@salesforce/dev-config/nyc"
+      "extends": "@salesforce/dev-config/nyc",
+      "check-coverage": true,
+      "lines": 90,
+      "statements": 90,
+      "functions": 90,
+      "branches": 90,
+      "reporter": ["lcov", "text"],
+      "extension": [".js"],
+      "exclude": ["bin/**/*.js", "**/*.test.js"]
   }
 }
