--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -12,3 +12,5 @@ updates:
     ignore:
       - dependency-name: 'typescript'
       - dependency-name: 'sinon'
+      - dependency-name: "*"
+        update-types: ["version-update:semver-major"]
