--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@salesforce/dev-scripts",
   "version": "0.9.18",
   "description": "Standardize package.json scripts and config files for Salesforce projects.",
-  "repository": "https://github.com/forcedotcom/sfdx-dev-packages",
+  "repository": "forcedotcom/dev-scripts",
   "bin": {
     "sf-build": "bin/sf-build.js",
     "sf-ci-docs": "bin/sf-ci-docs.js",
