--- a/package.json
+++ b/package.json
@@ -73,8 +73,7 @@
     "ts-node": "^10.0.0",
     "typedoc": "0.18.0",
     "typedoc-plugin-external-module-name": "~4.0.0",
-    "typescript": "^4.1.3",
-    "xunit-file": "^1.0.0"
+    "typescript": "^4.1.3"
   },
   "publishConfig": {
     "access": "public"
