--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salesforce/dev-scripts",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "description": "Standardize package.json scripts and config files for Salesforce projects.",
   "repository": "forcedotcom/dev-scripts",
   "bin": {
@@ -69,8 +69,8 @@
     "sinon": "10.0.0",
     "source-map-support": "~0.5.19",
     "ts-node": "^10.0.0",
-    "typedoc": "0.18.0",
-    "typedoc-plugin-external-module-name": "~4.0.0",
+    "typedoc": "^0.22.10",
+    "typedoc-plugin-missing-exports": "^0.22.6",
     "typescript": "^4.1.3",
     "xunit-file": "^1.0.0"
   },
