--- a/package.json
+++ b/package.json
@@ -69,8 +69,8 @@
     "sinon": "10.0.0",
     "source-map-support": "~0.5.19",
     "ts-node": "^10.0.0",
-    "typedoc": "^0.22.10",
-    "typedoc-plugin-missing-exports": "^0.22.6",
+    "typedoc": "0.22.10",
+    "typedoc-plugin-missing-exports": "0.22.6",
     "typescript": "^4.1.3",
     "xunit-file": "^1.0.0"
   },
