--- a/files/tsconfig-strict.json
+++ b/files/tsconfig-strict.json
@@ -4,7 +4,8 @@
 {
   "extends": "@salesforce/dev-config/tsconfig-strict",
   "compilerOptions": {
-    "outDir": "lib"
+    "outDir": "lib",
+    "incremental": true
   },
   "include": ["./src/**/*.ts"]
 }
