--- a/package.json
+++ b/package.json
@@ -1,21 +1,14 @@
 {
   "name": "@salesforce/dev-scripts",
-  "version": "3.1.0",
+  "version": "4.0.0-beta.0",
   "description": "Standardize package.json scripts and config files for Salesforce projects.",
   "repository": "forcedotcom/dev-scripts",
   "bin": {
-    "sf-build": "bin/sf-build.js",
     "sf-ci-docs": "bin/sf-ci-docs.js",
     "sf-clean": "bin/sf-clean.js",
-    "sf-compile": "bin/sf-compile.js",
-    "sf-compile-test": "bin/sf-compile-test.js",
     "sf-docs": "bin/sf-docs.js",
-    "sf-format": "bin/sf-format.js",
     "sf-install": "bin/sf-install.js",
-    "sf-lerna-install": "bin/sf-lerna-install.js",
-    "sf-lint": "bin/sf-lint.js",
-    "sf-prepack": "bin/sf-prepack.js",
-    "sf-test": "bin/sf-test.js"
+    "sf-prepack": "bin/sf-prepack.js"
   },
   "scripts": {
     "build": "echo 'no build necessary'",
@@ -50,7 +43,7 @@
     "chai": "^4.2.0",
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
-    "eslint": "^7.27.0",
+    "eslint": "^8.31.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-config-salesforce": "^1.1.0",
     "eslint-config-salesforce-license": "^0.1.6",
@@ -70,7 +63,8 @@
     "ts-node": "^10.0.0",
     "typedoc": "0.23.16",
     "typedoc-plugin-missing-exports": "0.23.0",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "wireit": "^0.9.3"
   },
   "publishConfig": {
     "access": "public"
