--- a/package.json
+++ b/package.json
@@ -33,7 +33,6 @@
   "dependencies": {
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@oclif/dev-cli": "^1",
     "@salesforce/dev-config": "^3.0.0",
     "@salesforce/prettier-config": "^0.0.2",
     "@types/chai": "^4.2.11",
@@ -55,6 +54,7 @@
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
+    "oclif": "^3.7.0",
     "prettier": "^2.7.1",
     "pretty-quick": "^3.1.0",
     "shelljs": "~0.8.4",
