--- a/package.json
+++ b/package.json
@@ -43,12 +43,12 @@
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
     "eslint": "^8.41.0",
-    "eslint-config-prettier": "^8.5.0",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-salesforce": "^2.0.1",
-    "eslint-config-salesforce-license": "^0.1.6",
+    "eslint-config-salesforce-license": "^0.2.0",
     "eslint-config-salesforce-typescript": "^1.1.1",
-    "eslint-plugin-header": "^3.0.0",
-    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-header": "^3.1.1",
+    "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsdoc": "^43.0.5",
     "eslint-plugin-prefer-arrow": "^1.2.1",
     "husky": "^7.0.4",
@@ -62,7 +62,7 @@
     "ts-node": "^10.0.0",
     "typedoc": "0.23.16",
     "typedoc-plugin-missing-exports": "0.23.0",
-    "typescript": "^4.1.3",
+    "typescript": "^4.9.5",
     "wireit": "^0.9.5"
   },
   "publishConfig": {
