--- a/package.json
+++ b/package.json
@@ -43,14 +43,7 @@
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
     "eslint": "^8.52.0",
-    "eslint-config-prettier": "^8.8.0",
-    "eslint-config-salesforce": "^2.0.1",
-    "eslint-config-salesforce-license": "^0.2.0",
-    "eslint-config-salesforce-typescript": "^2.0.0",
-    "eslint-plugin-header": "^3.1.1",
-    "eslint-plugin-import": "^2.27.5",
-    "eslint-plugin-jsdoc": "^46.8.2",
-    "eslint-plugin-prefer-arrow": "^1.2.1",
+    "eslint-config-salesforce-typescript": "^2.0.1-beta.0",
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
