--- a/package.json
+++ b/package.json
@@ -42,7 +42,6 @@
     "chai": "^4.3.10",
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
-    "eslint": "^8.52.0",
     "eslint-config-salesforce-typescript": "^2.0.1-beta.0",
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
@@ -60,5 +59,8 @@
   },
   "publishConfig": {
     "access": "public"
+  },
+  "devDependencies": {
+    "eslint": "^8.52.0"
   }
 }
