--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
     "@salesforce/prettier-config": "^0.0.3",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^9.0.0",
-    "@types/node": "^15.6.1",
-    "@types/sinon": "10.0.11",
+    "@types/node": "^18",
+    "@types/sinon": "^10.0.20",
     "chai": "^4.3.10",
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
@@ -46,7 +46,7 @@
     "husky": "^7.0.4",
     "mocha": "^9.1.3",
     "nyc": "^15.1.0",
-    "prettier": "^2.7.1",
+    "prettier": "^2.8.8",
     "pretty-quick": "^3.1.0",
     "shelljs": "~0.8.4",
     "sinon": "10.0.0",
