--- a/package.json
+++ b/package.json
@@ -35,24 +35,24 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@salesforce/dev-config": "^4.1.0",
     "@salesforce/prettier-config": "^0.0.3",
-    "@types/chai": "^4.3.9",
-    "@types/mocha": "^10.0.3",
+    "@types/chai": "^4.3.10",
+    "@types/mocha": "^10.0.4",
     "@types/node": "^18",
     "@types/sinon": "^10.0.20",
     "chai": "^4.3.10",
     "chalk": "^4.0.0",
     "cosmiconfig": "^7.0.0",
-    "eslint-config-salesforce-typescript": "^3.0.1",
+    "eslint-config-salesforce-typescript": "^3.0.5",
     "husky": "^7.0.4",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.8",
-    "pretty-quick": "^3.1.0",
-    "shelljs": "~0.8.4",
+    "pretty-quick": "^3.1.3",
+    "shelljs": "^0.8.5",
     "sinon": "10.0.0",
-    "source-map-support": "~0.5.19",
+    "source-map-support": "^0.5.21",
     "ts-node": "^10.9.1",
-    "typedoc": "0.23.16",
+    "typedoc": "^0.25.3",
     "typedoc-plugin-missing-exports": "0.23.0",
     "typescript": "^4.9.5",
     "wireit": "^0.14.1"
