feat: check links via linkinator (#255)
* feat: check links via linkinator

* chore: update glob, add skip env

* chore(release): 8.0.1-qa.0 [skip ci]

* ci: exit early if CI

---------

Co-authored-by: Eric Willhoit <ewillhoit@salesforce.com>
Co-authored-by: svc-cli-bot <svc_cli_bot@salesforce.com>

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@salesforce/dev-scripts",
-  "version": "8.0.0",
+  "version": "8.0.1-qa.0",
   "description": "Standardize package.json scripts and config files for Salesforce projects.",
   "repository": "forcedotcom/dev-scripts",
   "bin": {
@@ -43,6 +43,7 @@
     "cosmiconfig": "^7.0.0",
     "eslint-config-salesforce-typescript": "^3.0.5",
     "husky": "^7.0.4",
+    "linkinator": "^6.0.2",
     "mocha": "^10.2.0",
     "nyc": "^15.1.0",
     "prettier": "^2.8.8",
