--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "source-map-support": "^0.5.21",
     "ts-node": "^10.9.2",
     "typedoc": "^0.26.5",
-    "typedoc-plugin-missing-exports": "0.23.0",
+    "typedoc-plugin-missing-exports": "^3.0.0",
     "typescript": "^5.5.4",
     "wireit": "^0.14.5"
   },
