--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "chai": "^4.3.10",
     "chalk": "^4.0.0",
     "cosmiconfig": "^8.3.6",
-    "eslint-config-salesforce-typescript": "4.0.1-deb.0",
+    "eslint-config-salesforce-typescript": "4.0.1",
     "husky": "^7.0.4",
     "linkinator": "^6.1.1",
     "mocha": "^10.7.0",
